--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,27 +74,24 @@ p {
   gap: 4px;
 }
 
-
-
-.inputfields input{
+.cta {
+  margin-top: 20px;
   width: 100%;
-  display: flex;
-  padding: 8px 110px;
-  border-radius: 12px;
-  text-align: center;
+  
 }
 
-.cta {
+input{
   width: 100%;
+  height: 2.5rem;
+  border-radius: 12px;
+  text-align: center;
+  margin-bottom: 12px;
 }
 
 button {
-  display: flex;
-  padding: 10px 145px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  align-self: stretch;
+  width: 100%;
+  height: 3rem;
+  text-align: center;
   border-radius: 12px;
   background: #0872EF;
 }
