--- a/src/app/diary/diary.css
+++ b/src/app/diary/diary.css
@@ -9,3 +9,27 @@
     background: #FFF;
     box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.02);
 }
+
+.p-diary {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    align-self: stretch;
+    overflow: hidden;
+    color: #1e1e1e;
+    text-overflow: ellipsis;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: normal;
+}
+
+ul{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    height: 300px;
+}
+
+li {
+    list-style: none;
+}
