--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Poppins;
+    text-decoration: none;
   }
 
 body {
@@ -13,7 +14,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     background-color: antiquewhite;
     row-gap: 32px;
+    padding-top: 120px;
+    overflow-x: hidden;
   }
