--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -23,7 +23,7 @@ p {
 .banner-container {
   display: flex;
   width: 442px;
-  padding: 24px;
+  padding: 16px;
   flex-direction: column;
   align-items: flex-start;
   gap: 10px;
@@ -55,20 +55,13 @@ p {
   gap: 4px;
 }
 
-.cta {
+.cta-banner-wrapper {
   margin-top: 20px;
   width: 100%;
   
 }
 
-.cta.active {
-  background-color: #e2e3e6;
-  color: #413d39;
-  cursor: no-drop;
-  font-weight: 700;
-}
-
-input{
+.input-banner{
   width: 100%;
   height: 2.5rem;
   border-radius: 12px;
@@ -84,11 +77,18 @@ button {
   background: #0872EF;
 }
 
-.cta button p {
+.cta-banner button p {
   color: #FFF;
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+
+.active-banner {
+  background-color: #e2e3e6;
+  color: #413d39;
+  cursor: no-drop;
+  font-weight: 700;
 }
